# news

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  lefthook.yml  messages.pot  pyproject.toml  requirements-web.txt  requirements.txt
.cursor/rules/: accessibility.mdc  architecture.mdc  i18n.mdc  llm.mdc  news-source-discovery.mdc  project-context.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
agents/: news_source_discovery_agent.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  (+18 more)
app/: __init__.py  cli.py  config.py  i18n_strings.py  scheduler.py  worker_cli.py
config/: app.yaml  sources.yaml
docs/: ADMIN_DASHBOARD.md  ARCHITECTURE.md  I18N.md  MVP_PLAN.md  TECH_STACK.md  news_source_discovery_agent.md
ops/: __init__.py
plans/: phase_0_infrastructure.md
scripts/: fetch-news.sh
templates/: archive.html  article.html  base.html  index.html  login.html  register.html  settings.html  setup.html
tests/: conftest.py  test_article_service.py  test_cli_seed.py  test_db_articles.py  test_db_rewrite_requests.py  test_db_sources.py  test_extraction.py  test_feed_detection.py  test_fetcher.py  test_health.py  test_llm_provider.py  test_orchestrator.py  test_parser.py  test_profile_service.py  test_rewrite_service.py  test_scoring.py  test_scoring_service.py  test_settings_route.py  test_validation.py
(+84 files in other folders)
